<?xml version="1.0"?>
<package format="3">
  <name>ros2unity_examples</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy examples for the ROS2Unity textbook and bridge PoC.</description>
  <maintainer email="sumilee-pcu@users.noreply.github.com">sumilee</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
